[package]
name = "dcs-hemmecs"
version = "0.2.0"
authors = ["Ricardo Maes <ricmzn@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
raqote = { git = "https://github.com/ricmzn/raqote.git", branch = "0.8" }
crossbeam = "0.8"
font-kit = "0.7"
regex = "1.4"
