[package]
name = "dcs-hemmecs"
version = "0.3.0"
authors = ["Ricardo Maes <ricmzn@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"

[dependencies]
once_cell = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
winapi = { version = "0.3", features = ["libloaderapi", "winuser", "errhandlingapi"] }
regex = { version = "1", default_features = false, features = ["std", "perf-cache", "perf-dfa", "unicode-perl"] }
raqote = { git = "https://github.com/ricmzn/raqote.git", branch = "0.8" }
glm = { package = "nalgebra-glm", version = "0.3" }
native-windows-derive = "1"
native-windows-gui = "1"
crossbeam = "0.8"
font-kit = "0.7"
anyhow = "1"
toml = "0.5"
